--- a/app/src/main/res/layout/fragment_first_blank.xml
+++ b/app/src/main/res/layout/fragment_first_blank.xml
@@ -44,12 +44,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="172dp"
             android:layout_marginEnd="16dp"
-            android:text="Welcome to Quire App"
-
-
-            android:textSize="55sp"
             android:paddingHorizontal="60sp"
+
+
+            android:text="Welcome to PANDAS NOTES"
             android:textAlignment="center"
+            android:textSize="55sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,10 +59,12 @@
             android:id="@+id/tvSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:text="Need an account? Click here"
-            app:layout_constraintEnd_toEndOf="@+id/btn_about"
-            app:layout_constraintStart_toStartOf="@+id/btn_about"
-            app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />
+            app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
+            app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
+            app:layout_constraintHorizontal_bias="0.54"
+            app:layout_constraintStart_toStartOf="@+id/btn_signIn" />
 
         <TextView
             android:id="@+id/tvDescribe"
