--- a/app/src/main/res/layout/fragment_first_blank.xml
+++ b/app/src/main/res/layout/fragment_first_blank.xml
@@ -15,28 +15,24 @@
             android:id="@+id/btn_signIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginTop="24dp"
             android:backgroundTint="#009688"
             android:text="Sign in"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.553" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
 
         <Button
             android:id="@+id/btn_about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="49dp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="#6EACAA"
-            android:text="To About"
-            app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
-            app:layout_constraintHorizontal_bias="0.315"
-            app:layout_constraintStart_toStartOf="@+id/btn_signIn"
-            app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />
+            android:text="About"
+            app:layout_constraintEnd_toEndOf="@+id/tvSignIn"
+            app:layout_constraintStart_toStartOf="@+id/tvSignIn"
+            app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />
 
         <TextView
             android:id="@+id/tv_welcome"
@@ -47,11 +43,10 @@
             android:paddingHorizontal="60sp"
 
 
-            android:text="Welcome to PANDAS NOTES"
+            android:text="Welcome to Quire App"
             android:textAlignment="center"
-            android:textSize="55sp"
+            android:textSize="45sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,20 +54,20 @@
             android:id="@+id/tvSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="8dp"
             android:text="Need an account? Click here"
-            app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
             app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
-            app:layout_constraintHorizontal_bias="0.54"
-            app:layout_constraintStart_toStartOf="@+id/btn_signIn" />
+            app:layout_constraintStart_toStartOf="@+id/btn_signIn"
+            app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />
 
         <TextView
             android:id="@+id/tvDescribe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Click here to get a description"
             app:layout_constraintEnd_toEndOf="@+id/btn_about"
-            app:layout_constraintHorizontal_bias="0.545"
+            app:layout_constraintHorizontal_bias="0.51"
             app:layout_constraintStart_toStartOf="@+id/btn_about"
             app:layout_constraintTop_toBottomOf="@+id/btn_about" />
 
