--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -28,15 +28,14 @@
                 android:id="@+id/titles_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
-                android:layout_marginVertical="8dp"
+                android:layout_gravity="center"
                 android:background="@color/white"
+                android:padding="8dp"
+                android:layout_marginVertical="8dp"
                 android:ems="10"
                 android:hint="Title"
                 android:inputType="text"
-                android:minHeight="48dp"
-                android:padding="8dp"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/notes_input" />
 
@@ -60,7 +59,7 @@
                 android:id="@+id/save_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#009688"
+                android:backgroundTint="@color/teal_200"
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
                 android:text="Add Note" />
@@ -79,9 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card"
-        app:layout_constraintVertical_bias="0.0"
-
-     />
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
