--- a/app/src/main/res/layout/fragment_listview.xml
+++ b/app/src/main/res/layout/fragment_listview.xml
@@ -8,70 +8,119 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
-        android:padding="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
-        android:backgroundTint="#D2F3D1"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/top_constrant_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_card_bg"
+            android:orientation="horizontal">
 
-            <LinearLayout
+            <NumberPicker
+                android:id="@+id/numberPicker"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="32dp"
+                android:layout_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/img_set_textsize"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_checkbox"
+                app:layout_constraintEnd_toStartOf="@+id/image_editcolor"
+                app:layout_constraintStart_toEndOf="@+id/numberPicker"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/image_editcolor"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="32dp"
+                android:background="@drawable/icon_edit"
+                android:onClick="changeColor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/titles_input"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
+                android:background="@color/white"
+                android:ems="10"
+                android:hint="Title"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/notes_input"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/numberPicker"
+                app:layout_constraintVertical_bias="0.0" />
 
-                <EditText
-                    android:id="@+id/titles_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="8dp"
-                    android:layout_marginVertical="8dp"
-                    android:background="@color/white"
-                    android:ems="10"
-                    android:hint="Title"
-                    android:inputType="text"
-                    android:padding="8dp"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@+id/notes_input" />
+            <EditText
+                android:id="@+id/notes_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/white"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Note"
+                android:inputType="textMultiLine"
+                android:minHeight="120dp"
+                android:padding="8dp"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titles_input" />
 
-                <EditText
-                    android:id="@+id/notes_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="8dp"
-                    android:layout_marginVertical="8dp"
-                    android:background="@color/white"
-                    android:ems="10"
-                    android:gravity="start|top"
-                    android:hint="Note"
-                    android:inputType="textMultiLine"
-                    android:minHeight="120dp"
-                    android:padding="8dp"
-                    android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/img_panda"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/icon_happy_panda"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/notes_input" />
 
-                <Button
-                    android:id="@+id/save_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="8dp"
-                    android:backgroundTint="@color/teal_200"
-                    android:text="Add Note" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/save_button"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="8dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="@color/teal_200"
+                android:fontFamily="@font/aclonica"
+                android:text="Add Note"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.2"
+                app:layout_constraintStart_toEndOf="@id/img_panda"
+                app:layout_constraintTop_toBottomOf="@+id/notes_input" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
 
     <ListView
