--- a/app/src/main/res/navigation/navigate_overmain.xml
+++ b/app/src/main/res/navigation/navigate_overmain.xml
@@ -35,8 +35,8 @@
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
         <action
-            android:id="@+id/action_registerFragment_to_listviewFragment"
-            app:destination="@id/listviewFragment" />
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
