--- a/app/src/main/res/layout/fragment_listview.xml
+++ b/app/src/main/res/layout/fragment_listview.xml
@@ -123,10 +123,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+
     <ListView
         android:id="@+id/notes_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="388dp"
+        android:layout_height="333dp"
         android:layout_margin="16dp"
         android:layout_marginHorizontal="16dp"
         android:background="#D2F3D1"
@@ -135,6 +136,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card"
         app:layout_constraintVertical_bias="0.0" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
