--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -17,7 +17,8 @@
         android:layout_height="47dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+       android:hint="Name"
+        android:padding="10sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_headLine"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="@+id/tv_headLine"
@@ -27,8 +28,10 @@
         android:id="@+id/editTextPassword"
         android:layout_width="192dp"
         android:layout_height="43dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="Password"
+        android:padding="10sp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,7 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Button"
+        android:backgroundTint="#DCA70B"
+        android:text="Add User"
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
         app:layout_constraintStart_toStartOf="@+id/editTextPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
@@ -53,7 +57,7 @@
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:padding="20sp"
-        android:text="Please enter your username and password"
+        android:text="Please select your username and password"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +65,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.196" />
+
+    <ImageButton
+        android:id="@+id/img_Backarrow3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:minHeight="48dp"
+        android:src="?attr/actionModeCloseDrawable"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014"
+        android:contentDescription="An image with back arraow function" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
