--- a/app/src/main/res/navigation/navigate_overmain.xml
+++ b/app/src/main/res/navigation/navigate_overmain.xml
@@ -37,6 +37,9 @@
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_registerFragment_to_firstBlankFragment"
+            app:destination="@id/firstBlankFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -49,23 +52,13 @@
         <action
             android:id="@+id/action_loginFragment_to_listviewFragment"
             app:destination="@id/listviewFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_firstBlankFragment"
+            app:destination="@id/firstBlankFragment" />
     </fragment>
     <fragment
         android:id="@+id/listviewFragment"
         android:name="com.example.notesapp_pandas.ListviewFragment"
         android:label="fragment_listview"
-        tools:layout="@layout/fragment_listview" >
-        <action
-            android:id="@+id/action_listviewFragment_to_searchNotesFragment"
-            app:destination="@id/searchNotesFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/searchNotesFragment"
-        android:name="com.example.notesapp_pandas.SearchNotesFragment"
-        android:label="fragment_search_notes"
-        tools:layout="@layout/fragment_search_notes" >
-        <action
-            android:id="@+id/action_searchNotesFragment_to_listviewFragment"
-            app:destination="@id/listviewFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_listview" />
 </navigation>
